--- a/admin/index.html
+++ b/admin/index.html
@@ -460,6 +460,7 @@
             opacity: 0.9;
         }
     </style>
+    <script src="admin_auth.js"></script>
 </head>
 <body>
     <div class="header">
