--- a/customer/index.html
+++ b/customer/index.html
@@ -403,7 +403,7 @@
     <div class="header">
         <h1>متجر الجحدري</h1>
         <p>أفضل حسابات فري فاير بأسعار مناسبة</p>
-        <div class="storage-mode-indicator">وضع التخزين المحلي</div>
+        <div class="storage-mode-indicator">وضع التخزين السحابي</div>
     </div>
 
     <div class="container">
